--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,223 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+*,
+*::before,
+*::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  background-color: #ebe7e7;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cardContainer {
+  width: 400px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 10px 0px;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.headIcons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.connectSection {
+  padding: 0px 30px 10px 30px;
+  text-align: center;
+}
+
+.connectSection p {
+  font-size: 12px;
+  color: #666;
+}
+
+.inputSection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+input {
+  width: 60%;
+  height: 30px;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+}
+
+.inputSection button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.copied {
+  position: absolute;
+  top: -16px;
+  left: 30px;
+  bottom: 0;
+  color: red;
+}
+
+.checkContainer {
+  border-top: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+  margin: 16px 0;
+  padding: 10px 20px;
+}
+
+.checkContainer h3 {
+  font-size: 16px;
+}
+
+.checkContent {
+  display: flex;
+  align-items: center;
+}
+
+.checkContent input {
+  background-color: black;
+  border-radius: 50%;
+}
+
+.group {
+  padding: 6px;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.checkHold {
+  position: relative;
+}
+
+.group p {
+  position: absolute;
+  left: 30px;
+  top: 14px;
+}
+
+label {
+  font-size: 12px;
+  padding-left: 10px;
+  margin: 0;
+}
+
+label::before {
+  content: "";
+  background: url(/src/assests/images/Circlecheck.svg);
+  background-position: center;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 5px;
+  top: 14px;
+  cursor: pointer;
+
+  transform: scale(0) rotateZ(180deg);
+  transition: all 0.4s cubic-bezier(0.54, 0.01, 0, 1.49);
+}
+
+input[type="checkbox"]:checked + label::before {
+  transform: scale(1) rotateZ(0deg);
+}
+
+label::after {
+  content: "";
+  border: 2px solid #27ae60;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left: 6px;
+  top: 16px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.privacy {
+  font-size: 12px;
+  color: #2e2c2c;
+  text-align: left;
+  padding: 14px 8px 0px 8px;
+}
+
+.btnContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 15px 15px 15px;
+}
+
+.btnContainer button {
+  padding: 10px;
+  border: #ccc 1px solid;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.btnContainer button:hover,
+.inputSection button:hover {
+  border: 1px solid black;
+}
+
+.play {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.access {
+  background-color: black;
+  color: white;
+  margin-left: 10px;
+}
+
+.clickContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.clickBtn {
+  padding: 10px;
+  border: #ccc 1px solid;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: black;
+  color: white;
+}
+
+.clickBtn:hover,
+.access:hover {
+  background-color: #ccc;
+  color: black;
+  border: 1px solid black;
 }
